# trusty

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: trusty-project-manager.md
.trusty/tasks/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  4.md  5.md  6.md  7.md  8.md  9.md  prune_history.json
src/: claude_integration.rs  cli.rs  display.rs  focus.rs  main.rs  storage.rs  task.rs
