[package]
name = "trusty"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "A task manager for Claude Code written in Rust"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
comfy-table = "7.1"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
